--- a/myapp/src/Styles/signup.css
+++ b/myapp/src/Styles/signup.css
@@ -81,7 +81,7 @@
 .input input:hover {
     border-color: rgb(26, 173, 26);
 }
-#phone{
+#phonee{
     margin-top: 15px;
     box-sizing: border-box;
     -webkit-tap-highlight-color: transparent;
